yamls/mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: kubeflow
spec:
  mtls:
    mode: PERMISSIVE
