yamls/jupyter-web-app.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jupyter-web-app
    kustomize.component: jupyter-web-app
    run: jupyter-web-app
  name: jupyter-web-app-service
  namespace: kubeflow
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 5000
  selector:
    app: jupyter-web-app
    kustomize.component: jupyter-web-app
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jupyter-web-app
    kustomize.component: jupyter-web-app
  name: jupyter-web-app-deployment
  namespace: kubeflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jupyter-web-app
      kustomize.component: jupyter-web-app
  template:
    metadata:
      labels:
        app: jupyter-web-app
        kustomize.component: jupyter-web-app
    spec:
      containers:
        - env:
            - name: APP_PREFIX
              value: /jupyter
            - name: UI
              value: default
            - name: USERID_HEADER
              value: kubeflow-userid
            - name: USERID_PREFIX
              value: ""
            - name: APP_SECURE_COOKIES
              value: "true"
          image: docker.io/tae2089/jupyter-web-app:v1.7.0
          name: jupyter-web-app
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /etc/config
              name: config-volume
            - mountPath: /src/apps/default/static/assets/logos
              name: logos-volume
      serviceAccountName: jupyter-web-app-service-account
      volumes:
        - configMap:
            name: jupyter-web-app-config-92bgck72t2
          name: config-volume
        - configMap:
            name: jupyter-web-app-logos
          name: logos-volume
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  labels:
    app: jupyter-web-app
    kustomize.component: jupyter-web-app
  name: jupyter-web-app
  namespace: kubeflow
spec:
  host: jupyter-web-app-service.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  labels:
    app: jupyter-web-app
    kustomize.component: jupyter-web-app
  name: jupyter-web-app-jupyter-web-app
  namespace: kubeflow
spec:
  gateways:
    - kubeflow-gateway
  hosts:
    - "*"
  http:
    - headers:
        request:
          add:
            x-forwarded-prefix: /jupyter
      match:
        - uri:
            prefix: /jupyter/
      rewrite:
        uri: /
      route:
        - destination:
            host: jupyter-web-app-service.kubeflow.svc.cluster.local
            port:
              number: 80
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    app: jupyter-web-app
    kustomize.component: jupyter-web-app
  name: jupyter-web-app
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/istio-system/sa/istio-ingressgateway-service-account
  selector:
    matchLabels:
      app: jupyter-web-app
